fixed grid spacing

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,3 +9,16 @@ body {
   width: 75px;
 }
 
+#envUrl {
+  height: 250px;
+  width: 350px;
+  border: 5px 5px black;
+  box-shadow: 5px 5px black;
+  border-radius: 50px;
+}
+#env-card-read {
+  border: 5px 5px black
+}
+.no-gutters {
+  border: 5px 5px black
+}
